# ShellScape

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  pty.rs
src/components/: BackgroundLayer.tsx  BackgroundPicker.tsx  SettingsPanel.tsx  TabBar.tsx  TerminalView.tsx  TitleBar.tsx  Toolbar.tsx
src/hooks/: useEdgeDetection.ts  useTerminal.ts
src/stores/: settingsStore.ts
src/styles/: index.css
src/types/: settings.ts
